feat: Add support for CLUSTER and REPLICATED client (#112)
Continuation of the work contributed by @ZhengXinCN

---------

Co-authored-by: Xin Zheng <xin.zheng@post.ch>